2018-07-17  Aditya Keerthi  <akeerthi@apple.com>

        [macOS] TestWebKitAPI.PictureInPicture.WKUIDelegate is timing out
        https://bugs.webkit.org/show_bug.cgi?id=187730

        Reviewed by Jer Noble.

        This regression was introduced by r233865. PIP can now only be initiated from a
        window that is on screen.

        * TestWebKitAPI/Tests/WebKitCocoa/PictureInPictureDelegate.mm:
        (TestWebKitAPI::TEST):

2018-07-17  John Wilander  <wilander@apple.com>

        Add completion handlers to TestRunner functions setStatisticsLastSeen(), setStatisticsPrevalentResource(), setStatisticsVeryPrevalentResource(), setStatisticsHasHadUserInteraction(), and setStatisticsHasHadNonRecentUserInteraction()
        https://bugs.webkit.org/show_bug.cgi?id=187710
        <rdar://problem/42252757>

        Reviewed by Chris Dumez.

        * WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
        * WebKitTestRunner/InjectedBundle/InjectedBundle.cpp:
        (WTR::InjectedBundle::didReceiveMessageToPage):
        * WebKitTestRunner/InjectedBundle/TestRunner.cpp:
        (WTR::TestRunner::setStatisticsLastSeen):
        (WTR::TestRunner::statisticsCallDidSetLastSeenCallback):
        (WTR::TestRunner::setStatisticsPrevalentResource):
        (WTR::TestRunner::statisticsCallDidSetPrevalentResourceCallback):
        (WTR::TestRunner::setStatisticsVeryPrevalentResource):
        (WTR::TestRunner::statisticsCallDidSetVeryPrevalentResourceCallback):
        (WTR::TestRunner::setStatisticsHasHadUserInteraction):
        (WTR::TestRunner::setStatisticsHasHadNonRecentUserInteraction):
        (WTR::TestRunner::statisticsCallDidSetHasHadUserInteractionCallback):
        * WebKitTestRunner/InjectedBundle/TestRunner.h:
        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::setStatisticsLastSeen):
        (WTR::TestController::setStatisticsPrevalentResource):
        (WTR::TestController::setStatisticsVeryPrevalentResource):