@@ -5602,6 +5602,12 @@
       ],
       "status" : "committer"
    },
+   "Truitt Savell" : {
+      "emails" : [
+         "tsavell@apple.com"
+      ],
+      "status" : "committer"
+   },
    "Ulrike Rausch" : {
       "emails" : [
          "ich@liebefonts.com"
